2009-12-03  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpsTransportBindingElement.cs, HttpChannelListener.cs :
	  added URI scheme check.

2009-12-03  Atsushi Enomoto  <atsushi@ximian.com>

	* TransportSecurityBindingElement.cs : fix 2.1 build.

2009-12-03  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpsTransportBindingElement.cs :
	  RequireClientCertificate is false by default.
	  Remove extra #if NET_2_1.
	* SecurityBindingElement.cs :
	  Implement some transport security factory methods.
	* TransportSecurityBindingElement.cs :
	  It is not ISecurityCapabilities anymore.

2009-11-25  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageHeaders.cs
	  SecurityBindingElement.cs
	  LocalClientSecuritySettings.cs
	  TransportSecurityBindingElement.cs
	  FaultConverter.cs : They are now part of SL3 API.

2009-11-17  Atsushi Enomoto  <atsushi@ximian.com>

	* BinaryMessageEncodingBindingElement.cs : changes for 2.1 build.

2009-11-05  Geoff Norton  <gnorton@novell.com>

	* HttpsTransportBindingElement.cs: Implement basic https transport
	binding support for Moonlight and MonoTouch

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : remove CWLs.

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs : move back previous listener selector code in
	  ProcessRequest(). Unlike HttpListener, ASP.NET does not refine
	  and differentiate requests to deeper paths (such as /jsdebug), so
	  we need such refinement here.

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : dependent fix to ServiceMetadataExtension
	  changes.

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandler.cs, HttpReplyChannel.cs, AspNetReplyChannel.cs,
	  HttpChannelListener.cs, HttpListenerManager.cs :
	  Similar refactoring on ASP.NET side to the previous one.
	  Added ASP.NET implementation of HttpListenerManager and use some
	  part of it in SvcHttpHandler (ASP.NET stack does not fully make use
	  of the manager yet).