@@ -87,6 +87,38 @@ namespace System.ServiceModel.Channels
 			web_request.Method = "POST";
 			web_request.ContentType = Encoder.ContentType;
 
+#if !NET_2_1 // until we support NetworkCredential like SL4 will do.
+			// client authentication (while SL3 has NetworkCredential class, it is not implemented yet. So, it is non-SL only.)
+			var httpbe = (HttpTransportBindingElement) source.Source;
+			string authType = null;
+			switch (httpbe.AuthenticationScheme) {
+			// AuthenticationSchemes.Anonymous is the default, ignored.
+			case AuthenticationSchemes.Basic:
+				authType = "Basic";
+				break;
+			case AuthenticationSchemes.Digest:
+				authType = "Digest";
+				break;
+			case AuthenticationSchemes.Ntlm:
+				authType = "Ntlm";
+				break;
+			case AuthenticationSchemes.Negotiate:
+				authType = "Negotiate";
+				break;
+			}
+			if (authType != null) {
+				var cred = source.ClientCredentials;
+				string user = cred != null ? cred.UserName.UserName : null;
+				string pwd = cred != null ? cred.UserName.Password : null;
+				if (String.IsNullOrEmpty (user))
+					throw new InvalidOperationException (String.Format ("Use ClientCredentials to specify a user name for required HTTP {0} authentication.", authType));
+				// FIXME: fill name/pass from UserNamePassword.
+				var nc = new NetworkCredential (user, pwd);
+				web_request.Credentials = nc;
+				web_request.UseDefaultCredentials = false;
+			}
+#endif
+
 #if !NET_2_1 // FIXME: implement this to not depend on Timeout property
 			web_request.Timeout = (int) timeout.TotalMilliseconds;
 #endif
