@@ -1,3 +1,10 @@
+2009-12-04  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* HttpRequestChannel.cs, HttpChannelFactory.cs,
+	  HttpChannelListener.cs, HttpListenerManager.cs :
+	  implemented http client authentication and some of corresponding
+	  service code. Only client works so far.
+
 2009-12-03  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* HttpsTransportBindingElement.cs, HttpChannelListener.cs :
